...
                } else {
                    title
                },
                onValueChange = { onTitleChanged(it) },
                label = stringResource(R.string.title),
                modifier = Modifier
                    .testTag("eventTitleInput")
                    .fillMaxWidth()
                    .onFocusChanged { titleIsFocused = it.isFocused },
                supportingText = if (error is AddPostFormError.TitleError) {
                    {
                        Text(
                            text = stringResource(id = error.messageRes),
...
                } else {
                    description
                },
                onValueChange = { onDescriptionChanged(it) },
                label = "Description",
                modifier = Modifier
                    .testTag("eventDescriptionInput")
                    .fillMaxWidth()
                    .onFocusChanged { descriptionIsFocused = it.isFocused },
                supportingText = if (error is AddPostFormError.DescriptionError) {
                    {
                        Text(
                            text = stringResource(id = error.messageRes),
...
                        value = date?.toHumanDate()
                            ?: stringResource(
                                R.string.date_format
                            ),
                        onValueChange = {},
                        label = "Date",
                        modifier = Modifier.fillMaxWidth().testTag("eventDateInput"),
                        supportingText = if (error is AddPostFormError.LocalDateError) {
                            {
                                Text(
                                    text = stringResource(id = error.messageRes),
                                    color = MaterialTheme.colorScheme.error,
                                )
...
                        .weight(1f)
                ) {
                    CustomTextField(
                        value = time?.toHumanTime() ?: "HH : MM",
                        onValueChange = {},
                        label = stringResource(R.string.time),
                        modifier = Modifier.fillMaxWidth().testTag("eventTimeInput"),
                        supportingText = if (error is AddPostFormError.LocalTimeError) {
                            {
                                Text(
                                    text = stringResource(id = error.messageRes),
                                    color = MaterialTheme.colorScheme.error,
                                )
...
                        {
                            TextButton(onClick = {

                                onDateChanged(convertMillisToLocalDate(selectedDate.selectedDateMillis!!)) // !! because on confirm and initial selected date set : sure that selectedDate.selectedDateMillis is not null
                                showDialWithDateDialog = false
                            }) {
                                Text("OK")
                            }
                        },

                    ) {
                    //All text Color in white
                    DatePicker(
...
                } else {
                    address
                },
                onValueChange = { onAddressChanged(it) },
                label = stringResource(R.string.address),
                modifier = Modifier
                    .testTag("eventAddressInput")
                    .fillMaxWidth()
                    .onFocusChanged { addressIsFocused = it.isFocused },
                supportingText = if (error is AddPostFormError.AddressError) {
                    {
                        Text(
                            text = stringResource(id = error.messageRes),
...
