<resources>
    <string name="app_name">Eventorias</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="email_sign_in">Sign in with email</string>
    <string name="log_In">Log in</string>
    <string name="password">Password</string>
    <string name="log_in_with_password">Please enter your password.</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="recover_account">An account recovery e-mail will be sent to the following address.</string>
    <string name="cant_log_in">You are unable to connect</string>
    <string name="send">Send</string>
    <string name="create_account">Create an account</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="not_account">No account yet? Create an account</string>
    <string name="logged_in">Logged in successfully!</string>
    <string name="connetion_error">Connection Error</string>
    <string name="error_email">Invalid E-mail.</string>
    <string name="error_password">The password must be at least 6 characters long.</string>
    <string name="error_name">Please provide a first and last name.</string>
    <string name="send_mail_error">Error when sending mail</string>
    <string name="popup_message_recovery_account">Follow the instructions sent to address %1$s to recover your password.</string>
    <string name="logged_out">Logged out!</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="add_an_event">Add an Event</string>
    <string name="event_List">Event list</string>
    <string name="search_an_item">Search through events</string>
    <string name="sort_event">Sort events by name or date</string>
    <string name="error">Error Icon</string>
    <string name="errorTitle">Error</string>
    <string name="errorDescription">An error has occurred, please try again later</string>
    <string name="retry">Try again</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="contentDescription_go_back">Go back</string>
    <string name="creation_of_an_event">Creation of an event</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="tap_here_to_enter_your_description">Tap here to enter your description</string>
    <string name="new_event">New event</string>
    <string name="enter_full_address">Enter full address</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="error_title">Please enter a title</string>
    <string name="error_description">Please enter a description</string>
    <string name="error_local_date">Please select a date</string>
    <string name="error_local_time">Please select a time</string>
    <string name="error_address">Please enter an address</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_a_picture">Select a picture</string>
    <string name="image_selected">Image selected</string>
    <string name="action_save">Validate</string>
    <string name="error_saving_post">Error while saving the event</string>
    <string name="user_profile">User profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="feature_disabled_on_this_android_version">Feature disabled on this android version</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="delete_error_database">Deletion error: unable to delete account from database</string>
    <string name="delete_error_auth">Deletion error: unable to delete auth account</string>
    <string name="update_info">Save user info</string>
    <string name="saved">"Validate ! For email update, check your e-mails ! "</string>
    <string name="you_must_have_logged_in_recently_to_update_your_e_mail">You must have logged in recently to update your e-mail</string>
    <string name="error_update">Error, try to sign-In again.</string>
</resources>