...
private fun HomeFeed(
    modifier: Modifier = Modifier,
    items: List<Event>,
    onPostClick: (String) -> Unit
) {
    LazyColumn(
        modifier = Modifier.testTag("LazyEvent").then(modifier.padding(horizontal = 24.dp)),
        verticalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        items(items) { event ->
            EventCell(event = event, onPostClick = onPostClick, modifier = Modifier.testTag("eventItemTag"))
        }
    }
}

@Composable
private fun EventCell(
...
